# lazyslurm

./: CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml  justfile
.github/workflows/: LICENSE  ci.yml  release.yml
dev/: Dockerfile  Dockerfile.slurm  docker-compose.yml  local_slurm.conf  start_local_slurm.sh  submit_test_jobs.sh
dev/config/: slurm.conf  start_slurm.sh
dev/test_jobs/: array_job.sh  sample.sh
release/: README.md
release/homebrew/: lazyslurm.rb
scripts/: bump_version.py
src/: lib.rs  main.rs
src/models/: job.rs  mod.rs
src/slurm/: commands.rs  executor.rs  fixture.rs  mod.rs  parser.rs
src/ui/: app.rs  components.rs  events.rs  mod.rs
src/utils/: config.rs
test_jobs/: long_job.sh  sample_job.sh
tests/: app_behavior.rs  parser_snapshots.rs
tests/fixtures/array_jobs/: squeue.txt
tests/fixtures/array_jobs/scontrol/: 23673084_1.txt
tests/fixtures/basic/: squeue.txt
tests/fixtures/basic/scontrol/: 12345.txt  12346.txt  12347.txt
tests/fixtures/empty/: squeue.txt
tests/snapshots/: parser_snapshots__enhance_job_with_scontrol.snap  parser_snapshots__parse_scontrol_pending_job.snap  parser_snapshots__parse_scontrol_running_job.snap  parser_snapshots__parse_squeue_array_jobs.snap  parser_snapshots__parse_squeue_basic.snap  parser_snapshots__parse_squeue_empty.snap
