[package]
name = "lazyslurm"
version = "0.1.0"
edition = "2024"
description = "A terminal UI for managing SLURM jobs"
license = "MIT"
authors = ["Tom Hill <tom@hill.xyz>"]
repository = "https://github.com/hill/lazyslurm"

[[bin]]
name = "lazyslurm"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# Regex for parsing
regex = "1.10"
